2010-08-31  NANRI Masaoki  <southly@gmail.com>

	* src : fix call-process.
	call-processの標準入力・標準出力等の指定がうまく設定されない現象がおき
	ていたのを修正。

2010-07-14  NANRI Masaoki  <southly@gmail.com>

	* src : fix format "~T".
	「~colnum,colincT」のとき、「colnum+k*colinc」を満たす最小の正の整数kで
	桁を求めるように修正。
	(format nil "~0,1T")
	=> " "

	* src : fox format "~VT" in the case of being provided '() as a prefix parameter.
	Vに引数としてnilを渡したときの動作を修正。
	(format t "~VA" nil 'x)
	== (format t "~A" 'x)

	* src : fix for VC2010.
	Microsoft Visual C++ 2010 でのビルド用に修正。
	Makefileの修正のみ。

2010-04-04  NANRI Masaoki  <southly@gmail.com>

	* src : add repl.
	コマンドプロンプトを表示するバージョンxyzzyrpl.exeを作成できるようにし
	た。「nmake repl」で作成できる。

	;;; 簡易REPL
	(defun repl ()
	  (interactive)
	  (let ((*standard-input* *terminal-io*)
	        (*standard-output* *terminal-io*))
	    (loop
	      (format t "~%> ")
	      (format t "~A" (eval (read *standard-input*))))))

2010-03-01  NANRI Masaoki  <southly@gmail.com>

	* src : fix "*load-pathname*" initialization.
	ダンプ作成時にロードしたファイル名がそのままダンプファイルに保存される
	ようなので、起動時にも初期化するように修正。

	* src : fix format "~F".
	formatの"~F"の第一パラメータwを指定しないと第三パラメータkが機能しない
	のを修正。

	(dotimes (i 10)
	  (format t "~,,VF~%" i pi))
	3.141592653589793
	31.41592653589793
	314.1592653589793
	3141.592653589793
	31415.92653589793
	314159.2653589793
	3141592.653589793
	31415926.53589793
	314159265.3589793
	3141592653.589793
	nil

	(do ((i -9 (1+ i)))
	    ((> i 9))
	  (format t "~,,VF~%" i pi))
	-0.000000009
	-0.00000008
	-0.0000007
	-0.000006
	-0.00005
	-0.0004
	-0.003
	-0.02
	-0.1
	0.0
	10.0
	200.0
	3000.0
	40000.0
	500000.0
	6000000.0
	70000000.0
	800000000.0
	9000000000.0
	nil

2010-02-21  NANRI Masaoki  <southly@gmail.com>

	* src : fix applyhook.
	applyhook, *applyhook* をローカル関数に対応させた。
	call_applyhookの第一引数にクロージャを渡すように変更した。

	* src : add "*read-eval*".
	スペシャル変数*read-eval*が機能するようにした。
	*read-eval*の出力への影響の理解が怪しい。
	*read-eval*がnilの場合はencodingをunreadable-objectとして出力するようし
	ているが、自信なし。

2010-01-23  NANRI Masaoki  <southly@gmail.com>
